[gd_scene load_steps=2 format=3 uid="uid://jkhq0o18wbtp"]

[ext_resource type="Script" uid="uid://dnfqkp1sflqdu" path="res://scenes/UI/target_selection_menu.gd" id="1_258bk"]

[node name="TargetSelectionMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_258bk")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 292.0
offset_bottom = 233.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "选择目标"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="TargetList" type="ItemList" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="SelectButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(144, 0)
layout_mode = 2
text = "使用"

[node name="CancelButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(144, 0)
layout_mode = 2
text = "取消"
